--- a/apps/rollback-test/deployment.yaml
+++ b/apps/rollback-test/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: rollback-test
-        image: ghcr.io/michela877/rollback-test-main:0.0.5-main
+        image: test.local:32061/library/flask-hello:1.1v
+        #image: ghcr.io/michela877/rollback-test-main:0.0.5-main
         ports:
         - containerPort: 9081
