--- a/.github/workflows/harbor-update-workflow.yaml
+++ b/.github/workflows/harbor-update-workflow.yaml
@@ -1,59 +1,38 @@
-name: Aggiorna manifest da Harbor
+name: Update image tag from Harbor
 
 on:
   repository_dispatch:
-    types: [harbor_push]
+    types: [harbor-image-pushed]
 
 jobs:
-  update_manifest:
+  update-image:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write   # necessario per fare push
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-      - name: Imposta variabili
-        id: vars
-        run: |
-          # Valori dal payload o fallback
-          IMG="${{ github.event.client_payload.image }}"
-          TAG="${{ github.event.client_payload.tag }}"
-          PATH_YAML="${{ github.event.client_payload.path }}"
-          if [ -z "$IMG" ]; then IMG="library/flask-hello"; fi
-          if [ -z "$TAG" ]; then TAG="1.0v"; fi
-          if [ -z "$PATH_YAML" ]; then PATH_YAML="test-gitops/apps/rollback-test/deployment.yaml"; fi
-          echo "img=$IMG" >> $GITHUB_OUTPUT
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-          echo "path=$PATH_YAML" >> $GITHUB_OUTPUT
+    - name: Install yq
+      run: |
+        sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq
+        sudo chmod +x /usr/local/bin/yq
 
-      - name: Verifica file esistente
-        run: |
-          test -f "${{ steps.vars.outputs.path }}" || (echo "File non trovato: ${{ steps.vars.outputs.path }}" && exit 1)
+    - name: Extract image info from payload
+      run: |
+        echo '${{ toJson(github.event.client_payload) }}' > payload.json
+        IMAGE=$(jq -r '.event_data.repository.repo_full_name' payload.json)
+        TAG=$(jq -r '.event_data.resources[0].tag' payload.json)
 
-      - name: Aggiorna l'immagine nel manifest
-        run: |
-          IMG="${{ steps.vars.outputs.img }}"
-          TAG="${{ steps.vars.outputs.tag }}"
-          PATH_YAML="${{ steps.vars.outputs.path }}"
+        echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+        echo "TAG=$TAG" >> $GITHUB_ENV
 
-          echo "Imposto image a: ${IMG}:${TAG} in ${PATH_YAML}"
+    - name: Update deployment.yaml
+      run: |
+        yq e -i '.spec.template.spec.containers[0].image = "test.local:32061/'"$IMAGE:$TAG"'"' apps/rollback-test/deployment.yaml
 
-          # Sostituisce la riga 'image:' esistente nel container principale
-          # Mantiene indentazione e commenti su altre righe intatte
-          sed -i 's#^\(\s*image:\s*\).*#\1'"${IMG}:${TAG}"'#' "${PATH_YAML}"
-
-          echo "Anteprima diff:"
-          git --no-pager diff -- "${PATH_YAML}" || true
-
-      - name: Configura git e fai commit/push
-        run: |
-          git config user.email "github-actions@users.noreply.github.com"
-          git config user.name "github-actions"
-          git add "${{ steps.vars.outputs.path }}"
-          if git diff --cached --quiet; then
-            echo "Nessuna modifica da committare."
-            exit 0
-          fi
-          git commit -m "chore: update image to ${{ steps.vars.outputs.img }}:${{ steps.vars.outputs.tag }}"
-          git push
+    - name: Commit and push
+      run: |
+        git config user.name "gitops-bot"
+        git config user.email "gitops-bot@github.com"
+        git commit -am "Update image to $IMAGE:$TAG"
+        git push
